examples/qualification/executable_module_entry/negative_multi_hop_cycle_bare_import/Semantic.package
format 1
package negative_multi_hop_cycle_bare_import
manifest_dir .
module_root src
